<resources>
    <string name="app_name">NoWasteFinalProject</string>
    <string name="consume">Consume</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_expiry_date_req">Item Expiry Date <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="search">Search item</string>
    <string name="check_expired_items">Check Expired Items</string>
    <string name="intro1">Welcome to NoWaste APP!</string>
    <string name="intro2">This app is designed to track the expiry date of the food in the fridge or pantry.</string>
    <string name="intro3">Add/update/delete foods list, the app is able to manage their inventory and show the expired foods.</string>
    <string name="intro4">Tap on the button below to get started with using the app!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_text">Developer: Xiaohong Deng\n\nStudent ID: 991517517\n\nSubmission Date: Dec 10, 2021</string>

</resources>