<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_margin="16dp"
    tools:context=".ItemListFragment">

    <TextView
        android:id="@+id/item_name"
        style="@style/Widget.Inventory.Header"
        android:layout_marginStart="8dp"
        android:text="@string/item"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/item_expiry_date"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_expiry_date"
        style="@style/Widget.Inventory.Header"
        android:layout_below="@+id/item_name"
        android:layout_marginStart="8dp"
        android:text="@string/expiry_date"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/item_quantity"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/item_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_quantity"
        style="@style/Widget.Inventory.Header"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/quantity_in_stock"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/item_expiry_date"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_quantity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:listitem="@layout/item_list_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/add_new_item"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/expiryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="Expiry Items"
        android:src="@drawable/ic_notifications2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>
