<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_marginTop="80dp">

    <LinearLayout
        android:id="@+id/ll_textviews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#9abd4a"
            android:hint="@string/item_name_req"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_expiry_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pickDate_action"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#9abd4a"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Pick a date"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/item_expiry_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="Date: (not selected)"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/item_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#9abd4a"
            android:hint="@string/quantity_req"
            android:inputType="textShortMessage"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/save_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#9abd4a"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/save_action"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>